--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Juan Antonio Fernández de Alba CV">
     <meta name="author" content="Juan Antonio Fernández de Alba">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="user-shape.png">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
@@ -79,7 +79,7 @@
                 <div class="summary">
                     <p>
                         Hi! My name is Juan, I'm a Spanish web developer. I've been a software developer since 2013 but I landed on the web development world in 2016 and I love it!
-                        Although I'm pretty new I'm here to stay. I'm currently working as a Full Stack Developer in Mannheim, Germany. 
+                        Although I'm pretty new I'm here to stay. I'm currently working as a Full Stack Developer in Mannheim, Germany.
                      </p>
                 </div><!--//summary-->
             </section><!--//section-->
@@ -90,41 +90,84 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Lead Developer</h3>
-                            <div class="time">2015 - Present</div>
+                            <h3 class="job-title">Full Stack Developer</h3>
+                            <div class="time">October 2016 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">Startup Hubs, San Francisco</div>
+                        <div class="company">alpha-test GmbH, Mannheim, Germany</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                        <p>
+                           Development of complete online assessment solutions based on web technologies.
+                        </p>
+                        <p>
+                           Full stack solutions developed in PHP, javascript, HTML, CSS.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">2014 - 2015</div>
+                            <h3 class="job-title">Software developer</h3>
+                            <div class="time">October 2015 - October 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">Google, London</div>
+                        <div class="company">HOB GmbH & Co. KG, Nürnberg, Germany</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
+                        <p>
+                           Cyber security solutions.
+                        </p>
+                        <p>
+                           I worked in the VPN department and I was in charge of developing a new version for the HOB VPN Client - Gateway, using technologies like IKE and IPSec. The solutions were developed in C and C++.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">UI Developer</h3>
-                            <div class="time">2012 - 2014</div>
+                            <h3 class="job-title">GNSS Engineer</h3>
+                            <div class="time">October 2013 - October 2015</div>
                         </div><!--//upper-row-->
-                        <div class="company">Amazon, London</div>
+                        <div class="company">GMV, Madrid, Spain</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                        <p>
+                           In GMV I worked as a Software Developer in the Applications and Technologies Division.
+                        </p>
+                        <p>
+                           I worked in projects related with the implementation of software receivers for GNSS. Technologies used were C, C++ and Matlab.
+                        </p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Student researcher</h3>
+                            <div class="time">September 2013 - October 2013</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Universidad Carlos III, Madrid, Spain</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>
+                           I worked as a student researcher for the Electromagnetic characterization of elliptical waveguides (implementation in MATLAB), following the work done in my Master Thesis.
+                        </p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Intern</h3>
+                            <div class="time">September 2011 - December 2011</div>
+                        </div><!--//upper-row-->
+                        <div class="company">European Patent Office, The Hague, Netherlands</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>
+                           As an intern, I worked in the reclassification of patents and literature related with FPGAs.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -133,77 +176,133 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+                    <p>
+                      Here are the projects in which I participated in the companies I worked and my own projects.
+                    </p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
+                    <span class="project-title"><a href="https://bewerbung.com/selbsttests" target="_blank">Online assessments</a></span> -
+                    <span class="project-tagline">Responsive online self-assessments for XING under bewerbung.com</span>
+                </div><!--//item-->
 
-                </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">DevStudio</a></span> -
-                    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+                    <span class="project-title"><a href="http://hob.de/" target="_blank">VPN</a></span> -
+                     <span class="project-tagline">VPN client and gateway update to IKEv2.</span>
                 </div><!--//item-->
+
                 <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
+                    <span class="project-title"><a href="http://www.gmv.com/en/" target="_blank">GNSS</a></span> -
+                     <span class="project-tagline">GNSS software receiver implementation</span>
                 </div><!--//item-->
+
                 <div class="item">
-                    <span class="project-title"><a href="hhttp://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
+                    <span class="project-title"><a href="http://7inevent.com/">7inEvent</a></span> - <span class="project-tagline">A company founded by friends whose objective is to create events that tell stories.</span>
                 </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
-                </div><!--//item-->
+
             </section><!--//section-->
 
             <section class="skills-section section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
                 <div class="skillset">
-                    <div class="item">
-                        <h3 class="level-title">Python &amp; Django</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+
+                   <div class="item">
+                      <h3 class="level-title">HTML5 &amp; CSS</h3>
+                      <div class="level-bar">
+                           <div class="level-bar-inner" data-level="80%">
+                           </div>
+                      </div><!--//level-bar-->
+                   </div><!--//item-->
+
 
                     <div class="item">
                         <h3 class="level-title">Javascript &amp; jQuery</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Angular</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="95%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Ruby on Rails</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Sketch &amp; Photoshop</h3>
+                        <h3 class="level-title">PHP</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="60%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Node.js</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="60%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">RESTful APIs design</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="60%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Wordpress</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="40%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">Functional javascript</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="40%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">C</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">MATLAB</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">LaTeX</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="80%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">GNSS</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="50%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+
+                       <div class="item">
+                           <h3 class="level-title">Java</h3>
+                           <div class="level-bar">
+                               <div class="level-bar-inner" data-level="50%">
+                               </div>
+                           </div><!--//level-bar-->
+                       </div><!--//item-->
+
+
 
                 </div>
             </section><!--//skills-section-->
