--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:+4915221319432">+49 152 213 19432</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank">linkedin.com/in/juan-fernandez</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a></li>
-                </ul>
+                    <li class="pdf"><i class="fa fa-file-pdf-o"></i><a href="assets\files\Juan_Fernandez_Alba_CV_PDF.pdf" target="_blank">CV PDF version</a></li>
+               </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
