--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: fernandez.alba.juan@gmail.com">fernandez.alba.juan<br/>@gmail.com</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: fernandez.alba.juan@gmail.com">fernandez.alba.juan@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:+4915221319432">+49 152 213 19432</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank">linkedin.com/in/juan-fernandez</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a></li>
