--- a/index.html
+++ b/index.html
@@ -201,37 +201,37 @@
                 </div><!--//intro-->
                 <div class="item">
                     <span class="project-title"><a href="http://micelocator.com" target="_blank">Creator of MICElocator</a></span> -
-                    <span class="project-tagline">Manager for venues for the organization of events in <a href="http://micelocator.com">micelocator.com</a>. Technologies used: React, Redux, Webpack, Nodejs, Express, JWT, MongoDB.</span>
+                    <span class="project-tagline">Manager for venues for the organization of events in <a href="http://micelocator.com">micelocator.com</a>. Technologies used: React, Redux, Webpack, Nodejs, Express, JWT, MongoDB. Outcomes: currently working on financing opportunities.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="http://gamification.alpha-test.de/storemanager/" target="_blank">Creator of Hero of the Aisle</a></span> -
-                    <span class="project-tagline">Hero of the Aisle game <a href="http://gamification.alpha-test.de/storemanager/">gamification.alpha-test.de/storemanager</a>. Technologies used: HTML5, CSS3, Javascript.</span>
+                    <span class="project-tagline">Hero of the Aisle game under <a href="http://gamification.alpha-test.de/storemanager/">gamification.alpha-test.de/storemanager</a>. Technologies used: HTML5, CSS3, Javascript. Outcomes: first approach of the company to gaming.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="http://7inevent.com/" target="_blank">Creator of 7inEvent webpage</a></span> -
-                    <span class="project-tagline">7inEvent official webpage <a href="http://7inevent.com/">7inevent.com</a>. Technologies used: Wordpress.</span>
+                    <span class="project-tagline">7inEvent official webpage <a href="http://7inevent.com/">7inevent.com</a>. Technologies used: Wordpress. Outcomes: currently our official webpage. </span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="" target="_blank">Creator of RESTful API</a></span> -
-                    <span class="project-tagline">RESTful API for alpha-test.de. Technologies used: Swagger (Nodejs), Javascript, PHP, MySQL.</span>
+                    <span class="project-tagline">RESTful API for alpha-test.de. Technologies used: Swagger (Nodejs), Javascript, PHP, MySQL. Outcomes: still in development process.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="" target="_blank">Creator of Project Management tool</a></span> -
-                    <span class="project-tagline">Internal project management tool for alpha-test.de. Technologies used: React, Flux, HTML5, CSS3, Nodejs, PHP, MySQL.</span>
+                    <span class="project-tagline">Internal project management tool for alpha-test.de. Technologies used: React, Flux, HTML5, CSS3, Nodejs, PHP, MySQL. Outcomes: current tool used in the company for the management of manpower.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://bewerbung.com/selbsttests" target="_blank">Collaborator of Online assessments</a></span> -
-                    <span class="project-tagline">Responsive online self-assessments for XING under <a src="https://bewerbung.com/selbsttests">bewerbung.com</a>. Technologies used: Javascript, HTML5, CSS3, PHP, MySQL, SOAP.</span>
+                    <span class="project-tagline">Responsive online self-assessments for XING under <a src="https://bewerbung.com/selbsttests">bewerbung.com</a>. Technologies used: Javascript, HTML5, CSS3, PHP, MySQL, SOAP. Outcomes: already more than <strong>450000</strong> runs.</span>
                 </div><!--//item-->
 
                 <div class="item">
                     <span class="project-title"><a href="http://hob.de/" target="_blank">Project Engineer in VPN department.</a></span> -
-                    <span class="project-tagline">Development of VPN client and gateway update to IKEv2. Technologies used: C, C++.</span>
+                    <span class="project-tagline">Development of VPN client and gateway update to IKEv2. Technologies used: C, C++. Outcomes: further development of the tools.</span>
                 </div><!--//item-->
 
                 <div class="item">
                     <span class="project-title"><a href="http://www.gmv.com/en/" target="_blank">GNSS Engineer</a></span> -
-                     <span class="project-tagline">Implementation of software based GNSS receivers. Technologies used: C, C++, MATLAB.</span>
+                     <span class="project-tagline">Implementation of software based GNSS receivers. Technologies used: C, C++, MATLAB. Outcomes: 2 successfully completed projects under European Space Agency funding.</span>
                 </div><!--//item-->
 
                 <div class="item">
