new link CV pdf

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a></li>
                     <li class="xing"><i class="fa fa-xing"></i><a href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba" target="_blank">xing.to/JuanFernandez</a></li>
 
-                    <li class="pdf"><i class="fa fa-file-pdf-o"></i><a href="assets\files\Juan_Fernandez_Alba_CV_PDF.pdf" target="_blank">CV PDF version</a></li>
+                    <li class="pdf"><i class="fa fa-file-pdf-o"></i><a href="assets\Juan_Fernandez_Alba_CV_May_2017.pdf" target="_blank">CV PDF version</a></li>
 
                </ul>
             </div><!--//contact-container-->
