--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank">linkedin.com/in/juan-fernandez</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a></li>
                     <li class="xing"><i class="fa fa-xing"></i><a href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba" target="_blank">xing.to/JuanFernandez</a></li>
-
+                    <li class="angellist"><i class="fab fa-angellist"></i><a href="https://angel.co/juan-antonio-fernandez-de-alba" target="_blank">angel.co/juan-antonio-fernandez-de-alba</a></li>
                     <li class="pdf"><i class="fa fa-file-pdf-o"></i><a href="assets\Juan_Fernandez_Alba_CV_May_2017.pdf" target="_blank">CV PDF version</a></li>
-
+                    
                </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
@@ -79,7 +79,7 @@
             </section><!--//section-->
 
             <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiences</h2>
+                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experience</h2>
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -195,19 +195,19 @@
                     </p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title">Developer of mobile app for Cruz Roja Española.</span> -
+                    <span class="project-title"><a href="" target="_blank">Developer of mobile app for Cruz Roja Española.</a></span> -
                     <span class="project-tagline">Technologies used: React Native. </span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title">Developer of <a href="https://fazua.com">fazua.com</a></span> -
+                    <span class="project-title"><a href="https://fazua.com" target="_blank">Developer of fazua.com</a></span> -
                     <span class="project-tagline">Technologies and services used: AWS, Nginx, Django, Wagtail, React, Javascript, HTML, CSS. </span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title">Developer of internal user management tool for FAZUA GmbH</span> -
+                    <span class="project-title"><a href="" target="_blank">Developer of internal user management tool for FAZUA GmbH</a></span> -
                     <span class="project-tagline">Technologies used: Django, React, Redux, Javascript, HTML, CSS. </span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title">Developer of manufacturing execution system (MES) for production line in FAZUA GmbH</span> -
+                    <span class="project-title"><a href="" target="_blank">Developer of manufacturing execution system (MES) for production line in FAZUA GmbH</a></span> -
                     <span class="project-tagline">Technologies used: Django, React, Redux, Javascript, HTML, CSS. </span>
                 </div><!--//item-->
                 <div class="item">
@@ -275,6 +275,13 @@
                       <h3 class="level-title">Django &amp; Python</h3>
                       <div class="level-bar">
                            <div class="level-bar-inner" data-level="70%">
+                           </div>
+                      </div><!--//level-bar-->
+                   </div><!--//item-->
+                    <div class="item">
+                      <h3 class="level-title">React Native</h3>
+                      <div class="level-bar">
+                           <div class="level-bar-inner" data-level="60%">
                            </div>
                       </div><!--//level-bar-->
                    </div><!--//item-->
