--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: fernandez.alba.juan@gmail.com">fernandez.alba.juan@gmail.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:+4915221319432">+49 152 213 19432</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank">linkedin.com/in/juan-fernandez</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank">github.com/juan-fernandez</a></li>
-                    <li class="xing"><i class="fa fa-xing"></i><a href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba" target="_blank">xing.to/JuanFernandez</a></li>
-                    <li class="angellist"><i class="fab fa-angellist"></i><a href="https://angel.co/juan-antonio-fernandez-de-alba" target="_blank">angel.co/juan-antonio-fernandez-de-alba</a></li>
-                    <li class="pdf"><i class="fa fa-file-pdf-o"></i><a href="assets\Juan_Fernandez_Alba_CV_May_2017.pdf" target="_blank">CV PDF version</a></li>
+                    <li class="email"><i class="fab fa-envelope"></i><a href="mailto: fernandez.alba.juan@gmail.com"> fernandez.alba.juan@gmail.com</a></li>
+                    <li class="phone"><i class="fab fa-phone"></i><a href="tel:+4915221319432"> +49 152 213 19432</a></li>
+                    <li class="linkedin"><i class="fab fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank"> linkedin.com/in/juan-fernandez</a></li>
+                    <li class="github"><i class="fab fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank"> github.com/juan-fernandez</a></li>
+                    <li class="xing"><i class="fab fa-xing"></i><a href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba" target="_blank"> xing.to/JuanFernandez</a></li>
+                    <li class="angellist"><i class="fab fa-angellist"></i><a href="https://angel.co/juan-antonio-fernandez-de-alba" target="_blank"> angel.co/juan-antonio-fernandez-de-alba</a></li>
+                    <li class="pdf"><i class="fab fa-file-pdf-o"></i><a href="assets\Juan_Fernandez_Alba_CV_May_2017.pdf" target="_blank"> CV PDF version</a></li>
                     
                </ul>
             </div><!--//contact-container-->
