--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
                     <p>
-                        Hi! My name is Juan, I'm a Spanish web developer. I love my job and I try to bring passion to every work I do. I'm currently working as a Full Stack developer in FAZUA GmbH in Munich, Germany. 
+                        Hi! My name is Juan, I'm a Spanish web developer. I love my job and I try to bring passion to everything I do. I'm currently working as a Full Stack developer in FAZUA GmbH in Munich, Germany. 
                      </p>
                 </div><!--//summary-->
             </section><!--//section-->
