--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
                     <p>
-                      Here are the projects in which I participated in the companies I worked and my own projects.
+                      Here are the projects in which I took part.
                     </p>
                 </div><!--//intro-->
                 <div class="item">
