--- a/index.html
+++ b/index.html
@@ -84,7 +84,24 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Full Stack Developer</h3>
-                            <div class="time">April 2017 - Present</div>
+                            <div class="time">April 2018 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">JOOR</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>
+                           Software engineer
+                        </p>
+                        <p>
+                           Django, React.
+                        </p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Full Stack Developer</h3>
+                            <div class="time">April 2017 - April 2018</div>
                         </div><!--//upper-row-->
                         <div class="company">Fazua GmbH, Munich, Germany</div>
                     </div><!--//meta-->
