--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                           Software engineer
+                           Software engineer working in the online platform.
                         </p>
                         <p>
                            Django, React.
