--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                            Software engineer working in the online platform.
                         </p>
                         <p>
-                           Django, React.
+                           Django, React, GraphQL.
                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
