--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="far fa-envelope"></i><a href="mailto: fernandez.alba.juan@gmail.com"> fernandez.alba.juan@gmail.com</a></li>
-                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:+4915221319432"> +49 152 213 19432</a></li>
+                    <li class="phone"><i class="fas fa-phone"></i><a href="tel:+34600717754"> +34 600 717 754</a></li>
                     <li class="linkedin"><i class="fab fa-linkedin"></i><a href="http://www.linkedin.com/in/juan-fernandez" target="_blank"> linkedin.com/in/juan-fernandez</a></li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/juan-fernandez" target="_blank"> github.com/juan-fernandez</a></li>
                     <li class="xing"><i class="fab fa-xing"></i><a href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba" target="_blank"> xing.to/JuanFernandez</a></li>
@@ -90,11 +90,14 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                           Software engineer working in the online platform.
+                           As a Software Engineer I work both in the frontend and backend.
                         </p>
                         <p>
-                           Django, React, GraphQL.
+                           React, Redux, Apollo in the frontend. 
                         </p>
+                        <p>
+                            Python, Django, Graphene (GraphQL), PostgreSQL in the backend.
+                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 <div class="item">
@@ -212,8 +215,8 @@
                     </p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="" target="_blank">Developer of mobile app for Cruz Roja Española.</a></span> -
-                    <span class="project-tagline">Technologies used: React Native. </span>
+                    <span class="project-title"><a href="" target="_blank">Developer of mobile app for internal communication in Cruz Roja Española.</a></span> -
+                    <span class="project-tagline">Technologies used: React Native. Publication both in Google Play Store and Apple Store.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-title"><a href="https://fazua.com" target="_blank">Developer of fazua.com</a></span> -
@@ -250,10 +253,6 @@
                      <span class="project-tagline">Implementation of software based GNSS receivers. Technologies used: C, C++, MATLAB. Outcomes: 2 successfully completed projects under European Space Agency funding.</span>
                 </div><!--//item-->
 
-                <div class="item">
-                    <span class="project-title"><a href="http://7inevent.com/">Shareholder of 7inEvent</a></span> - <span class="project-tagline">A company founded by friends whose objective is to create events that tell stories.</span>
-                </div><!--//item-->
-
             </section><!--//section-->
 
             <section class="skills-section section">
@@ -261,13 +260,27 @@
                 <div class="skillset">
                    
                     <div class="item">
-                        <h3 class="level-title">React</h3>
+                        <h3 class="level-title">Javascript ES6</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
+                            <div class="level-bar-inner" data-level="90%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
                     <div class="item">
+                        <h3 class="level-title">React v16.0 and above</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
+                   <div class="item">
+                      <h3 class="level-title">HTML5 &amp; CSS3</h3>
+                      <div class="level-bar">
+                           <div class="level-bar-inner" data-level="90%">
+                           </div>
+                      </div><!--//level-bar-->
+                   </div><!--//item-->
+                   <div class="item">
                         <h3 class="level-title">Redux</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%">
@@ -275,33 +288,33 @@
                         </div><!--//level-bar-->
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-                   <div class="item">
-                      <h3 class="level-title">HTML5 &amp; CSS</h3>
-                      <div class="level-bar">
-                           <div class="level-bar-inner" data-level="80%">
-                           </div>
-                      </div><!--//level-bar-->
-                   </div><!--//item-->
-                    <div class="item">
                       <h3 class="level-title">Django &amp; Python</h3>
                       <div class="level-bar">
                            <div class="level-bar-inner" data-level="70%">
                            </div>
                       </div><!--//level-bar-->
                    </div><!--//item-->
+                   <div class="item">
+                        <h3 class="level-title">Design of GraphQL APIs</h3>
+                        <div class="level-bar">
+                             <div class="level-bar-inner" data-level="70%">
+                             </div>
+                        </div><!--//level-bar-->
+                      </div><!--//item-->
+                      <div class="item">
+                            <h3 class="level-title">Agile methodology</h3>
+                            <div class="level-bar">
+                                 <div class="level-bar-inner" data-level="70%">
+                                 </div>
+                            </div><!--//level-bar-->
+                          </div><!--//item-->
                     <div class="item">
                       <h3 class="level-title">React Native</h3>
                       <div class="level-bar">
-                           <div class="level-bar-inner" data-level="60%">
+                           <div class="level-bar-inner" data-level="70%">
                            </div>
                       </div><!--//level-bar-->
-                   </div><!--//item-->
+                    </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">RESTful APIs design</h3>
                         <div class="level-bar">
@@ -309,6 +322,13 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
+                    <div class="item">
+                            <h3 class="level-title">PostgreSQL</h3>
+                            <div class="level-bar">
+                                <div class="level-bar-inner" data-level="60%">
+                                </div>
+                            </div><!--//level-bar-->
+                        </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">Node.js</h3>
                         <div class="level-bar">
@@ -323,8 +343,6 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
-
                     <div class="item">
                         <h3 class="level-title">Functional javascript</h3>
                         <div class="level-bar">
@@ -340,24 +358,6 @@
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">MATLAB</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">LaTeX</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-
                 </div>
             </section><!--//skills-section-->
 
