fixes and add more technologies

--- a/index.html
+++ b/index.html
@@ -90,14 +90,23 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                           As a Software Engineer I work both in the frontend and backend.
+                           Frontend: React, Redux, Apollo.
                         </p>
                         <p>
-                           React, Redux, Apollo in the frontend. 
-                        </p>
-                        <p>
-                            Python, Django, Graphene (GraphQL), PostgreSQL in the backend.
+                            Backend: Python, Django, Graphene (GraphQL), PostgreSQL.
                          </p>
+                         <p>
+                            Github for code reviews.
+                        </p>
+                         <p>
+                            Continuous integration with Jenkins.
+                        </p>
+                        <p>
+                            Docker for development environment.
+                        </p>
+                        <p>
+                            Management of feature deployments with kubectl (Kubernetes).
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 <div class="item">
@@ -215,7 +224,7 @@
                     </p>
                 </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="" target="_blank">Developer of mobile app for internal communication in Cruz Roja Española.</a></span> -
+                    <span class="project-title"><a href="" target="_blank">Developer of mobile app for internal communication in Cruz Roja Española</a></span> -
                     <span class="project-tagline">Technologies used: React Native. Publication both in Google Play Store and Apple Store.</span>
                 </div><!--//item-->
                 <div class="item">
