--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                         <p>
                             Management of feature deployments with kubectl (Kubernetes).
                         </p>
+                        <p>
+                            Test-driven Development (TDD).
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 <div class="item">
