--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/fotoCV.jpg" alt="photoCV" />
                 <h1 class="name">Juan Fernández</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <h3 class="tagline">Frontend Developer</h3>
             </div>
 
             <div class="contact-container container-block">
@@ -73,7 +73,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
                     <p>
-                        Hi! My name is Juan, I'm a Spanish web developer. I love my job and I try to bring passion to everything I do. I'm currently working as a Full Stack developer in JOOR in Madrid, Spain. 
+                        Hi! My name is Juan, I'm a Spanish web developer. I love my job and I try to bring passion to everything I do. I'm currently working as a frontend developer for Undefined Labs in Madrid, Spain. 
                      </p>
                 </div><!--//summary-->
             </section><!--//section-->
@@ -83,32 +83,27 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Frontend Developer</h3>
+                            <div class="time">March 2019 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Undefined Labs</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p> React, GraphQL, Jest, Cypress.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Full Stack Developer</h3>
-                            <div class="time">April 2018 - Present</div>
+                            <div class="time">April 2018 - March 2019</div>
                         </div><!--//upper-row-->
                         <div class="company">JOOR</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>
-                           Frontend: React, Redux, Apollo.
-                        </p>
+                        <p>Frontend: React, Redux, Apollo.</p>
                         <p>
                             Backend: Python, Django, Graphene (GraphQL), PostgreSQL.
-                         </p>
-                         <p>
-                            Github for code reviews.
-                        </p>
-                         <p>
-                            Continuous integration with Jenkins.
-                        </p>
-                        <p>
-                            Docker for development environment.
-                        </p>
-                        <p>
-                            Management of feature deployments with kubectl (Kubernetes).
-                        </p>
-                        <p>
-                            Test-driven Development (TDD).
                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -223,7 +218,7 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="intro">
                     <p>
-                      Here are the projects in which I took part.
+                      Here are some of the projects in which I took part.
                     </p>
                 </div><!--//intro-->
                 <div class="item">
@@ -292,13 +287,6 @@
                            </div>
                       </div><!--//level-bar-->
                    </div><!--//item-->
-                   <div class="item">
-                        <h3 class="level-title">Redux</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
                     <div class="item">
                       <h3 class="level-title">Django &amp; Python</h3>
                       <div class="level-bar">
@@ -313,13 +301,6 @@
                              </div>
                         </div><!--//level-bar-->
                       </div><!--//item-->
-                      <div class="item">
-                            <h3 class="level-title">Agile methodology</h3>
-                            <div class="level-bar">
-                                 <div class="level-bar-inner" data-level="70%">
-                                 </div>
-                            </div><!--//level-bar-->
-                          </div><!--//item-->
                     <div class="item">
                       <h3 class="level-title">React Native</h3>
                       <div class="level-bar">
@@ -349,24 +330,9 @@
                         </div><!--//level-bar-->
                     </div><!--//item-->
                     <div class="item">
-                        <h3 class="level-title">PHP</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="55%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-                    <div class="item">
                         <h3 class="level-title">Functional javascript</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="50%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">C</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div><!--//level-bar-->
                     </div><!--//item-->
