--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@
                 fernandez.alba.juan@gmail.com</a
               >
             </li>
-            <li class="phone">
-              <i class="fas fa-phone"></i
-              ><a href="tel:+34600717754"> +34 600 717 754</a>
-            </li>
             <li class="linkedin">
               <i class="fab fa-linkedin"></i
               ><a
@@ -72,15 +68,6 @@
               <i class="fab fa-github"></i
               ><a href="https://github.com/juan-fernandez" target="_blank">
                 github.com/juan-fernandez</a
-              >
-            </li>
-            <li class="xing">
-              <i class="fab fa-xing"></i
-              ><a
-                href="https://www.xing.com/profile/JuanAntonio_FernandezdeAlba"
-                target="_blank"
-              >
-                xing.to/JuanFernandez</a
               >
             </li>
             <li class="angellist">
@@ -133,9 +120,8 @@
           </h2>
           <div class="summary">
             <p>
-              Hi! My name is Juan, I'm a Spanish web developer. I love my job
-              and I try to bring passion to everything I do. I'm currently
-              working as Software Engineer for Undefined Labs in Madrid, Spain.
+              Hi! My name is Juan, I'm a Spanish Software Engineer. I'm currently
+              working as Software Engineer at Datadog in Madrid, Spain.
             </p>
           </div>
           <!--//summary-->
@@ -150,7 +136,22 @@
             <div class="meta">
               <div class="upper-row">
                 <h3 class="job-title">Software Engineer</h3>
-                <div class="time">March 2019 - Present</div>
+                <div class="time">June 2020 - Present</div>
+              </div>
+              <!--//upper-row-->
+              <div class="company">Datadog</div>
+            </div>
+            <!--//meta-->
+            <div class="details">
+              <p>Node.js, React, GraphQL, Jest, Cypress, Python.</p>
+            </div>
+            <!--//details-->
+          </div>
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Software Engineer</h3>
+                <div class="time">March 2019 - June 2020</div>
               </div>
               <!--//upper-row-->
               <div class="company">Undefined Labs</div>
@@ -488,35 +489,13 @@
             </div>
             <!--//item-->
             <div class="item">
-              <h3 class="level-title">Design of GraphQL APIs</h3>
-              <div class="level-bar">
-                <div class="level-bar-inner" data-level="70%"></div>
-              </div>
-              <!--//level-bar-->
-            </div>
-            <!--//item-->
-            <div class="item">
               <h3 class="level-title">React Native</h3>
               <div class="level-bar">
                 <div class="level-bar-inner" data-level="60%"></div>
               </div>
               <!--//level-bar-->
             </div>
-            <div class="item">
-              <h3 class="level-title">PostgreSQL</h3>
-              <div class="level-bar">
-                <div class="level-bar-inner" data-level="50%"></div>
-              </div>
-              <!--//level-bar-->
-            </div>
             <!--//item-->
-            <div class="item">
-              <h3 class="level-title">Node.js</h3>
-              <div class="level-bar">
-                <div class="level-bar-inner" data-level="70%"></div>
-              </div>
-              <!--//level-bar-->
-            </div>
           </div>
         </section>
         <!--//skills-section-->
